--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,11 +27,11 @@ jobs:
 
       - name: Create settings.xml
         run: |
-          echo "<settings><servers><server><id>${{env.REPO_ID}}</id><username>$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $1}')</username><password>\${{ secrets.GITHUB_PAT }}</password></server></servers></settings>" > ${{ github.workspace }}/settings.xml
+          echo "<settings><servers><server><id>${{env.REPO_ID}}</id><username>$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $1}')</username><password>\${{ secrets.PUBLISH_PACKAGE_TOKEN }}</password></server></servers></settings>" > ${{ github.workspace }}/settings.xml
 
       - name: Publish package
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_PAT }}
+          GITHUB_TOKEN: ${{ secrets.PUBLISH_PACKAGE_TOKEN }}
         run: |
           REPO=${{ env.REPO_ID }}::default::${{ env.REPO_URL }}
           mvn -s settings.xml -U -B clean deploy -DaltDeploymentRepository="${REPO}"
