--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,10 @@ jobs:
 
       - name: Create settings.xml
         run: |
-          echo "<settings><servers><server><id>${{env.REPO_ID}}</id><username>$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $1}')</username><password>\${{ secrets.PUBLISH_PACKAGE_TOKEN }}</password></server></servers></settings>" > ${{ github.workspace }}/settings.xml
+          echo ${{env.REPO_ID}}
+          echo $(echo "$GITHUB_REPOSITORY" | awk -F / '{print $1}')
+          echo ${{ secrets.PUBLISH_PACKAGE_TOKEN }}
+          echo "<settings><servers><server><id>${{env.REPO_ID}}</id><username>$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $1}')</username><password>${{ secrets.PUBLISH_PACKAGE_TOKEN }}</password></server></servers></settings>" > ${{ github.workspace }}/settings.xml
 
       - name: Publish package
         env:
