--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,13 @@
         <url>https://github.com/openapitools/openapi-generator</url>
     </scm>
 
-    <distributionManagement>
+    <!-- <distributionManagement>
         <repository>
             <id>github</id>
             <name>Github Ledgelabs Apache Maven</name>
             <url>https://maven.pkg.github.com/ledgelabs/ledge-java-api</url>
         </repository>
-    </distributionManagement>
+    </distributionManagement> -->
 
     <licenses>
         <license>
