--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,33 @@ env:
   REPO_URL: https://maven.pkg.github.com/ledgelabs/ledge-java-api
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: "17"
+          distribution: "temurin"
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
+
+      - name: Grant execute permission to Gradle wrapper
+        run: chmod +x ${{ env.SOURCE_PATH }}/gradlew
+
+      - name: Build with Gradle
+        run: |
+          cd ${{ env.SOURCE_PATH }}
+          ./gradlew build
+
   publish:
+    needs: build
     runs-on: ubuntu-latest
     permissions:
       contents: write
