--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,11 +31,10 @@ jobs:
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
       - name: Grant execute permission to Gradle wrapper
-        run: chmod +x ${{ env.SOURCE_PATH }}/gradlew
+        run: chmod +x ./gradlew
 
       - name: Build with Gradle
         run: |
-          cd ${{ env.SOURCE_PATH }}
           ./gradlew build
 
   publish:
