--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,29 +13,23 @@ env:
   REPO_URL: https://maven.pkg.github.com/ledgelabs/ledge-java-api
 
 jobs:
+  # copied build job from maven.yml
   build:
+    name: Build @ledge/external-api
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
+    strategy:
+      matrix:
+        java: ["8"]
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v2
         with:
-          java-version: "17"
+          java-version: ${{ matrix.java }}
           distribution: "temurin"
-
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
-
-      - name: Grant execute permission to Gradle wrapper
-        run: chmod +x ./gradlew
-
-      - name: Build with Gradle
-        run: |
-          ./gradlew build
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --no-transfer-progress --file pom.xml
 
   publish:
     needs: build
