--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,7 @@ on:
   #   types: [created]
 
 env:
+  SOURCE_PATH: ./api
   REPO_ID: github
   REPO_URL: https://maven.pkg.github.com/ledgelabs/ledge-java-api
 
@@ -29,7 +30,9 @@ jobs:
           distribution: "temurin"
           cache: maven
       - name: Build with Maven
-        run: mvn -B package --no-transfer-progress --file pom.xml
+        run: |
+          cd ${{ env.SOURCE_PATH }}
+          mvn -B package --no-transfer-progress --file pom.xml
 
   publish:
     needs: build
@@ -47,11 +50,13 @@ jobs:
 
       - name: Create settings.xml
         run: |
+          cd ${{ env.SOURCE_PATH }}
           echo "<settings><servers><server><id>${{env.REPO_ID}}</id><username>$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $1}')</username><password>${{ secrets.PUBLISH_PACKAGE_TOKEN }}</password></server></servers></settings>" > ${{ github.workspace }}/settings.xml
 
       - name: Publish package
         env:
           GITHUB_TOKEN: ${{ secrets.PUBLISH_PACKAGE_TOKEN }}
         run: |
+          cd ${{ env.SOURCE_PATH }}
           REPO=${{ env.REPO_ID }}::default::${{ env.REPO_URL }}
           mvn -s ${{ github.workspace }}/settings.xml -U -B clean deploy -DaltDeploymentRepository="${REPO}"
